Implement GraphQL client